--- a/flaskr/templates/views/kvalitetark.html
+++ b/flaskr/templates/views/kvalitetark.html
@@ -256,7 +256,7 @@
     //if (kvid == 2) {
     //  filteredEgenskapstyper = filteredEgenskapstyper.filter(dict => dict.viktighet === "PÅKREVD_IKKE_ABSOLUTT" || dict.viktighet === "PÅKREVD_ABSOLUTT")
     //} 
-    const chartHeights = {'13': '1000px', '14':'500px','15':'500px', '28':'300px','30':'300px','58':'300px','59':'300px','62':'300px','5':'500px','6':'500px','7':'300px'}
+    const chartHeights = {'13': '1000px', '14':'500px','15':'500px', '28':'300px', '29':'300px','30':'300px','58':'300px','59':'300px','62':'300px','5':'500px','6':'500px','7':'300px', '33':'300px', '45':'300px'}
 
     document.getElementById('område_kvalitetselement').addEventListener('click', function() {
       // Ødelegger eksisterende canvas elementer for å kunne lage nye.
